Fix assertion failure in RenderGeometryMap::absoluteRect when frame scale != 1.0 https://bugs.webkit.org/show_bug.cgi?id=100912

Patch by Tien-Ren Chen <trchen@chromium.org> on 2012-11-01
Reviewed by Simon Fraser.

Frame scale will add transformation to RenderView, so fixed position doesn't
get propagated up to the viewport by RenderGeometryMap. This is handled
correctly in RenderView::mapLocalToContainer, causing the assertion to fail.
This patch corrects RenderGeometryMap::mapToAbsolute to handle the RenderView
transformation case.

A layout test is added to catch this issue. The test will crash debug build
without this patch.

Source/WebCore:

Test: compositing/geometry/fixed-position-composited-page-scale-scroll.html

* rendering/RenderGeometryMap.cpp:
(WebCore::RenderGeometryMap::mapToAbsolute):

LayoutTests:

* compositing/geometry/fixed-position-composited-page-scale-scroll-expected.txt: Added.
* compositing/geometry/fixed-position-composited-page-scale-scroll.html: Added.

Canonical link: https://commits.webkit.org/119104@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133248 268f45cc-cd09-0410-ab3c-d52691b4dbfc